[metadata]
name = nibe
version = attr: nibe.__version__
author = Jevgeni Kiski
author_email = yozik04@gmail.com
description = Nibe heatpump communication library
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = nibe modbus library nibegw
url = https://github.com/yozik04/nibe
project_urls =
    Bug Tracker = https://github.com/yozik04/nibe/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = LGPL 3

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    construct >= 2.10.0, < 3.0.0
    async_modbus >= 0.2.0

[options.package_data]
* = *.json, *.md

[options.entry_points]
console_scripts =
    nibe-convert-csv = nibe.console_scripts.convert_csv:main [convert]

[options.extras_require]
convert =
    pandas>=1.0.5
    python-slugify>=4.0.0

[options.packages.find]
exclude =
    tests*

[flake8]
max-line-length = 88
extend-ignore = E203

[coverage:report]
show_missing = true