[metadata]
name = nibe
version = attr: nibe.__version__
author = Jevgeni Kiski
author_email = yozik04@gmail.com
description = Nibe heatpump communication library
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = nibe modbus library nibegw
url = https://github.com/yozik04/nibe
project_urls =
    Bug Tracker = https://github.com/yozik04/nibe/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
license = LGPL 3

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    construct >= 2.10.0, < 3.0.0
    async_modbus >= 0.2.2
    async_timeout >= 4.0.0
    tenacity >= 8.0.0
    exceptiongroup >= 1.0.0

[options.package_data]
* = *.json, *.md
nibe = py.typed

[options.entry_points]
console_scripts =
    nibe-convert-csv = nibe.console_scripts.convert_csv:main [convert]
    nibe-cli = nibe.console_scripts.cli:main [cli]

[options.extras_require]
convert =
    pandas>=1.0.5
    python-slugify>=4.0.0
cli =
    asyncclick>=8.1.3.4

[options.packages.find]
exclude =
    tests*

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
# E128 continuation line under-indented for visual indent
ignore =
    E501,
    W503,
    E203,
    D202,
    W504,
    E128
noqa-require-code = True

[coverage:report]
show_missing = true

[codespell]
skip = *.ipynb,*.json,*.csv
